--- a/training app maven/training/src/main/resources/static/index.html
+++ b/training app maven/training/src/main/resources/static/index.html
@@ -13,5 +13,5 @@
 <style>@font-face{font-family:Boathouse;src:url("./media/Boathouse-Bold-MRRVS7RL.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap}@font-face{font-family:Boathouse;src:url("./media/Boathouse-Regular-WBB34DB6.woff2") format("woff2");font-weight:500;font-style:normal;font-display:swap}body{background-color:#4ec7c2;font-family:Boathouse}</style><link rel="stylesheet" href="styles-ZXXP7D2B.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-ZXXP7D2B.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="main-SJI43PWL.js" type="module"></script></body>
+<script src="main-OFVVLC6C.js" type="module"></script></body>
 </html>
