--- a/training app maven/training/src/main/resources/static/index.html
+++ b/training app maven/training/src/main/resources/static/index.html
@@ -13,5 +13,5 @@
 <style>@font-face{font-family:Boathouse;src:url("./media/Boathouse-Bold-MRRVS7RL.woff2") format("woff2");font-weight:700;font-style:normal;font-display:swap}@font-face{font-family:Boathouse;src:url("./media/Boathouse-Regular-WBB34DB6.woff2") format("woff2");font-weight:500;font-style:normal;font-display:swap}:root{--mat-paginator-container-text-color:#1B1F23;--mat-paginator-container-size:500;--mat-paginator-container-text-weight:700;--mat-progress-spinner-active-indicator-color:#FC4C02}body{background-color:#4ec7c2;font-family:Boathouse;margin:0}app-root{height:100%;display:flex;flex-direction:column;min-height:100dvh;justify-content:space-between}*:has(+.tra-navigation){margin-bottom:60px}</style><link rel="stylesheet" href="styles-5PFDJUGA.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-5PFDJUGA.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="main-EWPPVD4R.js" type="module"></script></body>
+<script src="main-QS45OLSS.js" type="module"></script></body>
 </html>
